# slonodi

./: README.md  pyproject.toml
slonodi/: __init__.py  container.py  injector.py  metadata.py  specifiers.py
