[tool.poetry]
name = "slonodi"
version = "0.1.0"
description = ""
authors = ["Nero <nerodono0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slonogram = { git = "https://github.com/slonogram/slonogram", branch = "develop", rev = "a06964c840d44c66e434d7ca23ef37ad8be19eef" }

[tool.black]
line-length = 75

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
