[tool.poetry]
name = "slonodi"
version = "0.1.0"
description = ""
authors = ["Nero <nerodono0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.extras]
slonogram = ["slonogram"]

[tool.black]
line-length = 75

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
